Css/style.css
:root {
  --LightBeige-color: #e9d9d0;
  --Beige-color: #d8c1ad;
  --LightBrown-color: #83604a;
  --Brown-color: #452c24;
  --black-color: #000000;
  --maroon-color: #872e28;
  --LightMaroon-color: #9f453d;
  --orange-color: #bb7b33;
  --grey-color: #57544d;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Amiri", serif; /*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
  /*background-color: #2c281d;*/
}

h1,
h2 {
  font-family: "Amiri", serif;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}


/* index page Start */
.index {
  background-color: #2c281d;
}

.bottom-left-image {
  position: fixed;
  bottom: 0;
  left: 0%;
  width: 30%;
  height: auto;
}

.bottom-right-image {
  position: fixed;
  bottom: 0;
  right: 0%;
  width: 30%;
  height: auto;
}

.index {
  background-color: #57544d;
  position: fixed;
  right: 30%;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 40vw;
  max-width: 500px;
  height: auto;
  padding: 5% 3%;
  border-radius: 180px 180px 0px 0px;
  text-align: center;
}

.index h1 {
  font-family: "Amiri", serif;
  font-size: clamp(1.5rem, 6vw, 5rem);
  color: #c9bbb2;
  margin-bottom: 10px;
}

.index p {
  font-family: "Amiri", serif;
  color: #c9bbb2;
  font-size: 1.3rem;
  padding: 0 10%;
}
/*body {
  background-color: #2c281d;
}*/

.bottom-left-image {
  position: fixed;
  bottom: 0;
  left: 0%;
  width: 30%;
  height: auto;
}

.bottom-right-image {
  position: fixed;
  bottom: 0;
  right: 0%;
  width: 30%;
  height: auto;
}

.index {
  background-color: #57544d;
  position: fixed;
  right: 30%;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 40vw;
  max-width: 500px;
  height: auto;
  padding: 5% 3%;
  border-radius: 180px 180px 0px 0px;
  text-align: center;
}

.index h1 {
  font-family: "Amiri", serif;
  font-size: clamp(1.5rem, 6vw, 5rem);
  color: #c9bbb2;
  margin-bottom: 10px;
}

.index p {
  font-family: "Amiri", serif;
  color: #c9bbb2;
  font-size: 1.3rem;
  padding: 0 10%;
}
/* index page end */

/* Header Start */
header {
  background-color: var(--bg-primary);
  height: 100vh;
}

header .navbar {
  background-color: var(--maroon-color);
  border-bottom: 1px solid var(--Beige-color);
  position: fixed;
  width: 100%;
  z-index: 1;
}

header .navbar nav {
  display: flex;
  justify-content: space-between;
  max-width: 1100px;
  margin: auto;
  padding: 1.5rem 2rem;
}

#home #logo {
  color: var(--LightBeige-color);
  font-size: 24px;
  font-weight: 1000;
}

header .navbar nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
}

header .navbar nav ul a {
  margin: 0 15px;
  color: var(--LightBeige-color);
  font-weight: 600;
}

/* Image Ribbon Start */
.image-ribbon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 100%;
  overflow: hidden;
  background-color: var(--LightBeige-color);
  padding: 10px 0;
}

.image-ribbon {
  display: flex;
  width: calc(7 * 200px);
  animation: scroll 10s linear infinite;
}

.image-ribbon img {
  width: 200px;
  height: auto;
  margin: 0 10px;
  border-radius: 10px;
}

button {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  cursor: pointer;
  padding: 10px;
  font-size: 18px;
}

#prevBtn {
  left: 10px;
}

#nextBtn {
  right: 10px;
}

@keyframes scroll {
  0% { transform: translateX(0); }
  100% { transform: translateX(-100%); }
}
/* Image Ribbon End */
/* Header end */

/*  الكلاسات اللي استخدمها اكثر من مرة  */
.container{
  max-width: 1100px;
  margin: auto;
  padding:0 2rem;
}


/* about start */ 
#about {
  padding: 3rem 0;
}

#about h2 {
  text-align: center;
  font-size: 38px;
  color: var(--maroon-color);
  font-weight: 600;
  letter-spacing: 1px;
}
#about h4 {
  text-align: center;
  font-size: 20px;
  color: var(--maroon-color);
  font-weight: 600;
  letter-spacing: 1px;
}
#about hr {
  background-color: var(--LightMaroon-color);
  Width:100px;
  height: 3px;
  border : none;
  margin: 5px auto 0 ;
}
#about{
  background-color: var(--LightBeige-color);
}

#about .row{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-content: center;
  align-items: center;
  gap: 2rem;
  margin-top: 4rem;
}

#about .row .item {
  background: var(--Beige-color);
  border-radius: 5px;
  transition: all 0.3s ease;
}

#about .row .item:hover{
  transform: scale(1.03);
}

#about .row .item .item-content {
  padding: 20px 15px 30px;
}

#about .row .item .item-content h3 {
  text-align: center;
  font-size: 20px;
  color: var(--black-color);
  margin-bottom: 10px;
}

#about .row .item .item-content p{
  text-align: center;
  font-size: 12px;
  color: var(--black-color);
  font-weight: 300;

}

#about .row .item img{
  max-width: 100%;
  border-bottom: 6px solid var(--LightBeige-color) ;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

/* about end */

